# kg_engine

./: CMakeLists.txt
core/: CMakeLists.txt
core/includes/core/: Application.hpp  Camera.hpp  Event.hpp  Input.hpp  Log.hpp  Window.hpp
core/includes/core/modules/: UIModule.hpp
core/includes/core/rendering/OpenGL/: IndexBuffer.hpp  Renderer.hpp  ShaderProgram.hpp  VertexArray.hpp  VertexBuffer.hpp
core/includes/core/utils/: test.hpp
core/src/core/: Application.cpp  Camera.cpp  Input.cpp  Window.cpp
core/src/core/modules/: UIModule.cpp
core/src/core/rendering/OpenGL/: IndexBuffer.cpp  Renderer.cpp  ShaderProgram.cpp  VertexArray.cpp  VertexBuffer.cpp
core/src/core/utils/: test.cpp
editor/: CMakeLists.txt
editor/src/: main.cpp
